--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "5a92a227",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,116 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "def process_excel(input_files, output_folder):\n",
-    "    for file_path in input_files:\n",
-    "        try:\n",
-    "            df = pd.read_excel(file_path)\n",
-    "            output_path = os.path.join(output_folder, f\"processed_{os.path.basename(file_path)}\")\n",
-    "            df.to_excel(output_path, index=False)\n",
-    "        except Exception as e:\n",
-    "            messagebox.showerror(\"Processing Error\", f\"Failed processing:\\n{file_path}\\n\\nError:\\n{str(e)}\")\n",
+    "credit_keywords = {\n",
+    "    \"zelle\": \"Gross Trucking Income\",\n",
+    "    \"deposit\": \"Gross Trucking Income\",\n",
+    "    \"payment received\": \"Gross Trucking Income\",\n",
+    "    \"refund\": \"Reimbursement\",\n",
+    "    \"rebate\": \"Reimbursement\",\n",
+    "    \"mobile deposit\": \"Gross Trucking Income\",\n",
+    "    \"purchase return\" : \"return\",\n",
+    "}\n",
+    "\n",
+    "credit_return_keywords = {\n",
+    "    \"fontana ca\" : \"Subhaulers & Carriers\"\n",
+    "}\n",
+    "\n",
+    "debit_keywords = {\n",
+    "    \"zelle\": \"Gross Trucking Income\",\n",
+    "    \"fuel\": \"Fuel Cost\",\n",
+    "    \"pump\": \"Fuel Cost\",\n",
+    "    \"gas\": \"Fuel Cost\",\n",
+    "    \"insurance\": \"Insurance\",\n",
+    "    \"advance\": \"Loan or Advance\",\n",
+    "    \"loan\": \"Loan or Advance\",\n",
+    "    \"restaurant\": \"Food & Dining\",\n",
+    "    \"bar\": \"Entertainment\",\n",
+    "    \"grill\": \"Food & Dining\",\n",
+    "    \"hotel\": \"Lodging\",\n",
+    "    \"subscription\": \"Subscription\",\n",
+    "    \"grocery\": \"Groceries\",\n",
+    "    \"prepass\": \"Tolls and Parking\",\n",
+    "\n",
+    "    \n",
+    "    \"purchase authorized\": \"Subhaulers & Carriers\",\n",
+    "    \"check\" : \"Truck Maintenance Cost\",\n",
+    "    \n",
+    "\n",
+    "    # Companies\n",
+    "    \"pathward na\" : \"Liability Insurance\",\n",
+    "    \"ibex \" : \"Liability Insurance\",\n",
+    "\n",
+    "    # Licences and Permits\n",
+    "    \"jst registration\" : \"Business Licenses and Permits\",\n",
+    "    \"unified carrier\" : \"Business Licenses and Permits\",\n",
+    "\n",
+    "    # Medical\n",
+    "    \"drug testing\": \"Drug Testing\",\n",
+    "\n",
+    "    # Taxes\n",
+    "    \"cdtfa\" : \"CDTFA\",\n",
+    "    \"tax\" : \"Taxes\",\n",
+    "\n",
+    "    # Bank\n",
+    "    \"monthly service fee\" : \"Bank Service Charges\"\n",
+    "}\n",
+    "debit_check_keywords = {\n",
+    "    \"check\" : \"Truck Maintenance Cost\",\n",
+    "    \"cashed\" : \"Truck Maintenance Cost\",\n",
+    "    \"deposited\" : \"Truck Maintenance Cost\",\n",
+    "    \"overdraft fee\": \"Bank Service Charges\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def process_excel(input_path, output_folder):\n",
+    "    try:\n",
+    "        df = pd.read_excel(input_path)\n",
+    "        categories = []\n",
+    "\n",
+    "        for _, row in df.iterrows():\n",
+    "            amount = row[\"Amount\"]\n",
+    "            desc = row[\"Description\"]\n",
+    "\n",
+    "            if amount > 0:\n",
+    "                category = categorize_credit(desc)\n",
+    "            else:\n",
+    "                category = categorize_debit(desc)\n",
+    "\n",
+    "            # if not category:\n",
+    "            #     category = lookup_vendor_web(desc)\n",
+    "\n",
+    "            categories.append(category)\n",
+    "\n",
+    "        df[\"Category\"] = categories\n",
+    "\n",
+    "        output_path = os.path.join(output_folder, f\"processed_{os.path.basename(input_path)}\")\n",
+    "        df.to_excel(output_path, index=False)\n",
+    "    except Exception as e:\n",
+    "        messagebox.showerror(\"Processing Error\", f\"Failed processing:\\n{input_path}\\n\\nError:\\n{str(e)}\")\n",
+    "\n",
+    "\n",
+    "def categorize_credit(description):\n",
+    "    desc = str(description).lower()\n",
+    "    for key, value in credit_keywords.items():\n",
+    "        if key in desc:\n",
+    "            if value == \"return\":\n",
+    "                for key1, value1 in credit_return_keywords.items():\n",
+    "                    if key1 in desc:\n",
+    "                        return value1\n",
+    "            return value\n",
+    "            \n",
+    "    return None\n",
+    "\n",
+    "def categorize_debit(description):\n",
+    "    desc = str(description).lower()\n",
+    "    for key, value in debit_keywords.items():\n",
+    "        if key in desc:\n",
+    "            if \"check\" in desc:\n",
+    "                for key1, value1 in debit_check_keywords.items():\n",
+    "                    if desc.startswith(key1):\n",
+    "                        return value1\n",
+    "            return value\n",
+    "    return None\n",
     "\n",
     "def select_files():\n",
     "    files = filedialog.askopenfilenames(filetypes=[(\"Excel files\", \"*.xlsx *.xls\")])\n",
@@ -37,16 +139,20 @@
     "    if not selected_input_files or not output_folder_var.get():\n",
     "        messagebox.showerror(\"Error\", \"Please select input files and output folder.\")\n",
     "        return\n",
-    "    process_excel(selected_input_files, output_folder_var.get())\n",
+    "    for file_path in selected_input_files:\n",
+    "        process_excel(file_path, output_folder_var.get())\n",
     "    messagebox.showinfo(\"Success\", \"Processing completed!\")\n",
     "\n",
     "root = tk.Tk()\n",
     "root.title(\"Excel Processor\")\n",
     "\n",
     "# Variables\n",
-    "selected_input_files = []  # real list of files\n",
+    "selected_input_files = []  # real list of files # JUST for Debugging\n",
+    "selected_input_files.append(\"C:/Users/TCE/Downloads/Input.xlsx\")  # JUST for Debugging\n",
     "input_files_display_var = tk.StringVar()  # shown in entry\n",
+    "input_files_display_var.set(\"; \".join(selected_input_files))  # JUST for Debugging\n",
     "output_folder_var = tk.StringVar()\n",
+    "output_folder_var.set(\"C:/Users/TCE/Downloads\")  # JUST for Debugging\n",
     "\n",
     "# Widgets\n",
     "tk.Button(root, text=\"Select Excel Files\", command=select_files).pack(pady=5)\n",
